[package]
name = "zotify-genre-tagger"
description = "For when you forgot to enable genre tagging in Zotify"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
env_logger = "0.11.8"
ffmpeg-next = "8.0.0"
futures = "0.3.31"
log = "0.4.28"
rand = "0.9.2"
rspotify = { version = "0.15.1", features = ["env-file"] }
tokio = { version = "1.48.0", features = ["full"] }
